--- a/adrian/config/linux/NOTES.mkd
+++ b/adrian/config/linux/NOTES.mkd
@@ -4,22 +4,6 @@
 # packages
 - vim
 - tmux
-- [pathogen.vim](https://github.com/tpope/vim-pathogen)
-
-        mkdir -p ~/.vim/autoload ~/.vim/bundle && \
-        curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
-
-
-## ubuntu
-vifm
-htop
-
-## redhat
-
-[vifm](http://vifm.info/downloads.shtml)
-- pkg dependency
-    - gcc
-    - ncurses-devel
-
-[htop](http://dl.fedoraproject.org/pub/epel/7/x86_64/h/htop-1.0.3-3.el7.x86_64.rpm)
+- vifm
+- htop
 
