--- a/adrian/config/linux/NOTES.mkd
+++ b/adrian/config/linux/NOTES.mkd
@@ -21,5 +21,6 @@ htop
 - pkg dependency
     - gcc
     - ncurses-devel
+    - if `make` fails with `aclocal-1.15` error then before running `configure` run `autoreconf -f -i`
 
 [htop](http://dl.fedoraproject.org/pub/epel/7/x86_64/h/htop-1.0.3-3.el7.x86_64.rpm)
