--- a/adrian/config/linux/NOTES.mkd
+++ b/adrian/config/linux/NOTES.mkd
@@ -21,7 +21,9 @@ htop
 - pkg dependency
     - gcc
     - ncurses-devel
-    - if `make` fails with `aclocal-1.15` error then before running `configure` run `autoreconf -f -i`
+    - if `make` fails with `aclocal-1.15` error then, before running `./configure`:
+        - install `automake`
+        - run `autoreconf -f -i`
     - copy `.config` folder to `~/.config`; remove `~/.vifm` folder if present
 
 [htop](http://dl.fedoraproject.org/pub/epel/7/x86_64/h/htop-1.0.3-3.el7.x86_64.rpm)
