--- a/adrian/config/linux/NOTES.mkd
+++ b/adrian/config/linux/NOTES.mkd
@@ -6,6 +6,7 @@
 - copy `~/.ssh` keys; set right permissions, initialize ssh-agent, ssh-add private key
 - `get-sources.sh` -- centos: use htop/ tmux rpms below instead
 - `.tmux.conf` copy to `~`; latest version of the config file needed
+- copy `.config` folder to `~/.config`; remove `~/.vifm` folder if present
 
 # dependencies
 
@@ -35,5 +36,4 @@ tmux
 htop
 - [centos6](ftp://ftp.pbone.net/mirror/ftp5.gwdg.de/pub/opensuse/repositories/home:/kalyaka/CentOS_CentOS-6/x86_64/htop-1.0.2-6.1.x86_64.rpm)
 - [centos7](http://dl.fedoraproject.org/pub/epel/7/x86_64/h/htop-1.0.3-3.el7.x86_64.rpm)
-
 
